add api to query workflow status
